--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
-  <title>React App</title>
+  <title>Movie App</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="potato"></div>
 </body>
 
 </html>
